argocd/base/traefik-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: http-to-https-redirect
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: argocd
  name: allow-local-only-argocd
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.1.0/24
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http-redirect
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.brandt.widdershoven.nl`)
      kind: Rule
      services:
        - kind: TraefikService
          name: noop@internal
      middlewares:
        - name: http-to-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.brandt.widdershoven.nl`)
      priority: 10
      # middlewares:
      #   - name: allow-local-only-argocd
      #     namespace: argocd
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.brandt.widdershoven.nl`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      # middlewares:
      #   - name: allow-local-only-argocd
      #     namespace: argocd
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls
